--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        <span style="font-weight:900;font-size:3em">Abinaya</span>
     </div>
     <hr />
-    <img src="my image.jpg" alt="my image.jpg" width="300px" height="300px" style="border-radius:10px" />
+    <img src="my image" alt="my image" width="300px" height="300px" style="border-radius:10px" />
     <hr />
     <blockquote>
       I Have completed my HSE in Ariyalur. <br />
@@ -19,6 +19,7 @@
     </blockquote>
     <hr />
     <h3>EDUCATION IS THE MOST POWERFUL WEAPON IN THE WORLD</h3>
+    <hr />
     <div style="text-align:center;">
        <a href="https://www.github.com/vvjs-22" style="text-decoration:none;">Visit My GitHub Page</a>
     </div>
