--- a/index.html
+++ b/index.html
@@ -18,10 +18,35 @@
       Now,I am an engineering student in GCE Thanjavur.
     </blockquote>
     <hr />
-    <h3>EDUCATION IS THE MOST POWERFUL WEAPON IN THE WORLD</h3>
+    <table style="width:70%;text-align:center;margin: 0 auto;border:1px solid white; border-collapse: collapse;">
+      <tr>
+        <th style="border-bottom: 1px solid white;">Qualification</th>
+        <th style="border-bottom: 1px solid white;">Institution</th>
+        <th style="border-bottom: 1px solid white;">Year of Passing</th>
+        <th style="border-bottom: 1px solid white;">Percentage/CGPA</th>
+      </tr>
+      <tr>
+        <td>BE/ECE</td>
+        <td>Government College of Engineering, Thanjavur.</td>
+        <td>2020-2021</td>
+        <td>7.56</td>
+      </tr>
+      <tr>
+        <td>HSC</td>
+        <td>Paarivallal Higher Secondary School,Nagamangalam.</td>
+        <td>2018-2020</td>
+        <td>89%</td>
+      </tr>
+      <tr>
+        <td>SSLC</td>
+        <td>Government Higher Secondary School,Kovilur.</td>
+        <td>2016-2018</td>
+        <td>92%</td>
+      </tr>
+    </table>
     <hr />
     <div style="text-align:center;">
-       <a href="https://www.github.com/vvjs-22" style="text-decoration:none;">Visit My GitHub Page</a>
+      <a href="https://www.github.com/vvjs-22" style="text-decoration:none;">Visit My GitHub Page</a>
     </div>
     <hr />
     <address>
