--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       Now,I am an engineering student in GCE Thanjavur.
     </blockquote>
     <hr />
+    <h3>Educational Qualifications </h3>
     <table style="width:70%;text-align:center;margin: 0 auto;border:1px solid white; border-collapse: collapse;">
       <tr>
         <th style="border-bottom: 1px solid white;">Qualification</th>
@@ -30,19 +31,19 @@
         <td>Government College of Engineering, Thanjavur.</td>
         <td>2020-2021</td>
         <td>7.56</td>
-      </tr>
+      </tr><hr />
       <tr>
         <td>HSC</td>
         <td>Paarivallal Higher Secondary School,Nagamangalam.</td>
         <td>2018-2020</td>
         <td>89%</td>
-      </tr>
+      </tr><hr />
       <tr>
         <td>SSLC</td>
         <td>Government Higher Secondary School,Kovilur.</td>
         <td>2016-2018</td>
         <td>92%</td>
-      </tr>
+      </tr><hr />
     </table>
     <hr />
     <div style="text-align:center;">
